examples/test/testpolicy15698.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15698
  namespace: namespace154
spec:
  podSelector:
    matchLabels:
      key6: value6
      key46: value34
      key15: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value34
          key15: value20
      podSelector:
        matchLabels:
          key10: value48
          key18: value37
          key2: value15
